# ast-edit

./: .gitignore  PLAN.md  PLAN_STAGE_1.md  PLAN_STAGE_2.md  PROGRESS_STAGE_1.md  PlanExplanationStage2.md  README.md  pyproject.toml
configs/: datasets.yaml  sandbox.yaml  teacher_prompts.yaml  vllm_actors.yaml
dataset/agentpack/: README.md  _meta.json  content  download.py
dataset/canitedit/: README.md  __init__.py  _meta.json  content  download.py
dataset/commitpackft/: README.md  _meta.json  content  download.py
dataset/editpackft/: README.md  _meta.json  content  download.py
dataset/marv/: README.md  download.py
dataset/oce_dataft/: README.md  download.py
dataset/smellycode/: README.md  _meta.json  content  download.py
scripts/: download_dataset_sample.py  ingest_agentpack.py  ingest_commitpack.py  ingest_editpack.py  ingest_marv.py  ingest_oce.py  ingest_smellycode.py  manage_dataset_storage.py  report_dataset_stats.py  report_teacher_metrics.py  synth_astgrep_rules.py
src/actors/: README.md  actor_loop.py  vllm_client.py
src/data/: download_utils.py  schemas.py
src/dataset/: __init__.py  download_all.py
src/sandbox/: README.md  runner.py
src/state/: README.md  manager.py
src/teachers/: README.md  srl_teacher.py
tests/: test_actor_loop.py  test_download_all_datasets.py  test_download_dataset_sample.py  test_download_utils.py  test_manage_dataset_storage.py  test_report_teacher_metrics.py  test_sandbox_runner.py  test_schemas.py  test_srl_teacher.py  test_state_manager.py  test_vllm_client.py
